--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#data
+src/data/activities.csv
+src/data/triplayer.json
+src/data/activities.json
+
 # dependencies
 /node_modules
 /.pnp
