--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "csv-parser": "^3.0.0",
+    "deck.gl": "^8.4.20",
+    "esm": "^3.2.25",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^5.3.16",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
